--- a/contents/8mmFilm/badapple/index.html
+++ b/contents/8mmFilm/badapple/index.html
@@ -11,12 +11,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./../../../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./../../../css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<script src="./../../../js/jquery.min.js"></script>
-	<script src="./../../../js/bootstrap.min.js"></script>
-	<script src="./../../../js/jquery.equalheight.min.js"></script>
+	<script src="./../../../js/bootstrap.bundle.min.js"></script>
 	<style type="text/css">
-		body {
-			padding-top: 90px;
+		main {
+			margin-top: 90px;
 		}
 
 		.img-responsive-overwrite {
@@ -28,55 +28,38 @@
 			;
 		}
 	</style>
-	<!--&#91;if lt IE 9&#93;>
-		<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-	<!&#91;endif&#93;-->
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
-	<header>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a href="/" class="navbar-brand">gutugutu3030</a>
-					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="navbar-collapse collapse" id="navbar-main">
-					<ul class="nav navbar-nav">
-						<li class="active dropdown">
-							<a href="./../../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="./../../../index.html">Products</a>
-								</li>
-								<li>
-									<a href="./../../../library.html">Libraries</a>
-								</li>
-								<li>
-									<a href="./../../../app/index.html">Apps</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="./../../../profile.html">Profile</a>
-						</li>
-						<li>
-							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
-						</li>
-
-					</ul>
-				</div>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">gutugutu3030</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Contents
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="./../../../index.html">Products</a></li>
+							<li><a class="dropdown-item" href="./../../../library.html">Libraries</a></li>
+							<li><a class="dropdown-item" href="./../../../app/index.html">Apps</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./../../../profile.html">Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-	</header>
+	</nav>
     <main>
         <div class="container"></div>
 		<section>
@@ -143,29 +126,29 @@
 			<h2>参考文献</h2>
 			<ol>
 				<li>England, J. Inkjet Printed Film Process: Video frames printed onto transparency film and cut down to Super 8 or 16mm film dimensions. 2011.
-					<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+					<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank"><i class="bi-link"></i></a>
 				</li>
 			</ol>
 			<h2>その他</h2>
 			<h3><a href="../projector/index.html">映写機の自作</a></h3>
 			<ol>
 				<li>試行錯誤の過程（フィルムの詳細はこちら）
-					<a href="https://sites.google.com/view/gutugutu3030/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+					<a href="https://sites.google.com/view/gutugutu3030/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="bi-link"></i></a>
 				</li>
 				<li>Bad Apple フィルム
-					<a href="http://www.mediafire.com/download/9c97lh8qnpsyn2t/badapple_silent.pdf" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+					<a href="http://www.mediafire.com/download/9c97lh8qnpsyn2t/badapple_silent.pdf" target="_blank"><i class="bi-link"></i></a>
 				</li>
 			</ol>
 			<h3>動画</h3>
 			<ol>
 				<li>ニコニコ動画　マイリスト
-					<a href="http://www.nicovideo.jp/mylist/55794312" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+					<a href="http://www.nicovideo.jp/mylist/55794312" target="_blank"><i class="bi-film"></i></a>
 				</li>
 				<li>youtube（音合成）
-					<a href="https://www.youtube.com/watch?v=TqPrpoFX_pE" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+					<a href="https://www.youtube.com/watch?v=TqPrpoFX_pE" target="_blank"><i class="bi-film"></i></a>
 				</li>
 				<li>youtube（光学再生）
-					<a href="https://www.youtube.com/watch?v=u9LW35ivHT8" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+					<a href="https://www.youtube.com/watch?v=u9LW35ivHT8" target="_blank"><i class="bi-film"></i></a>
 				</li>
 			</ol>
 		</section>
