--- a/profile.html
+++ b/profile.html
@@ -11,12 +11,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<script src="./js/jquery.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/jquery.equalheight.min.js"></script>
+	<script src="./js/bootstrap.bundle.min.js"></script>
 	<style type="text/css">
-		body {
-			padding-top: 90px;
+		main {
+			margin-top: 90px;
 		}
 
 		.img-responsive-overwrite {
@@ -28,55 +28,38 @@
 			;
 		}
 	</style>
-	<!--&#91;if lt IE 9&#93;>
-		<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-	<!&#91;endif&#93;-->
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
-	<header>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a href="/" class="navbar-brand">gutugutu3030</a>
-					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="navbar-collapse collapse" id="navbar-main">
-					<ul class="nav navbar-nav">
-						<li class="active dropdown">
-							<a href="./index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="./index.html">Products</a>
-								</li>
-								<li>
-									<a href="./library.html">Libraries</a>
-								</li>
-								<li>
-									<a href="./app/index.html">Apps</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="./profile.html">Profile</a>
-						</li>
-						<li>
-							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
-						</li>
-
-					</ul>
-				</div>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">gutugutu3030</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Contents
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="./index.html">Products</a></li>
+							<li><a class="dropdown-item" href="./library.html">Libraries</a></li>
+							<li><a class="dropdown-item" href="./app/index.html">Apps</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="./profile.html">Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-	</header>
+	</nav>
     <main>
         	<div class="container">
 		<div>
@@ -119,17 +102,17 @@
 										</li>
 									<li>2017/7/24  Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載 
 											<a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">
-							<i class="glyphicon glyphicon-link"></i>
+							<i class="bi-link"></i>
 						</a>
 										</li>
 									<li>2017/9/6   新たな技術を福祉にいかす体験ワークショップにて研究事例紹介 
 											<a href="http://goodjobcenter.com/topics/report/959/" target="_blank">
-							<i class="glyphicon glyphicon-link"></i>
+							<i class="bi-link"></i>
 						</a>
 										</li>
 									<li>2017/9/22  Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載 
 											<a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">
-							<i class="glyphicon glyphicon-link"></i>
+							<i class="bi-link"></i>
 						</a>
 										</li>
 									<li>2018/3     明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得 
@@ -138,7 +121,7 @@
 										</li>
 									<li>2022       インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任 
 											<a href="https://www.wiss.org/" target="_blank">
-							<i class="glyphicon glyphicon-link"></i>
+							<i class="bi-link"></i>
 						</a>
 										</li>
 							</ul>
@@ -162,10 +145,10 @@
 								<i class="fa fa-file-pdf-o"></i>
 							</a>
 							<a href="http://ci.nii.ac.jp/naid/40020528769" target="_blank">
-								<i class="glyphicon glyphicon-link"></i>
+								<i class="bi-link"></i>
 							</a>
 							<a href="https://www.youtube.com/watch?v=N3dJ4XRDF1I" target="_blank">
-								<i class="glyphicon glyphicon-film"></i>
+								<i class="bi-film"></i>
 							</a>
 						</li>
 					</ol>
@@ -213,7 +196,7 @@
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
 									<a href="https://www.youtube.com/watch?v=54m38d4nUgg" target="_blank">
-										<i class="glyphicon glyphicon-film"></i>
+										<i class="bi-film"></i>
 									</a>
 								</li>
 							</ol>
@@ -224,10 +207,10 @@
 									Vol.2018-HCI-176，Issue.6，No.12，2018．
 									<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 										target="_blank">
-										<i class="glyphicon glyphicon-link"></i>
+										<i class="bi-link"></i>
 									</a>
 									<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
-										<i class="glyphicon glyphicon-film"></i>
+										<i class="bi-film"></i>
 									</a>
 									<strong class="text-info">[学生奨励賞]</strong>
 								</li>
@@ -248,7 +231,7 @@
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
 									<a href="https://www.youtube.com/watch?v=hM2Jfhzky48" target="_blank">
-										<i class="glyphicon glyphicon-film"></i>
+										<i class="bi-film"></i>
 									</a>
 								</li>
 								<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015),
@@ -267,12 +250,12 @@
 					<ol>
 						<li>「コピー感覚で立体造形−明治大、３年以内に新３Ｄプリンター実用化」, 日刊工業新聞記事掲載, (2016年9月16日付).
 							<a href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank">
-								<i class="glyphicon glyphicon-link"></i>
+								<i class="bi-link"></i>
 							</a>
 						</li>
 						<li>「【トレたま】コピー機感覚の３Ｄプリンター」, テレビ東京 WBS「トレンドたまご」取材, (2016年10月3日放送).
 							<a href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank">
-								<i class="glyphicon glyphicon-link"></i>
+								<i class="bi-link"></i>
 							</a>
 						</li>
 						<li>「明治大の３Ｄプリンター　形や大きさ，調整容易　タッチパネル使う試作機」, 日経産業新聞記事掲載, (2016年10月12日付).
@@ -286,7 +269,7 @@
 					<ol>
 						<li>Fitter：実寸に合ったものを得るシステム, Maker Faire Tokyo 2016, 明治大学宮下研究室出展, (2016年8月6-7日).
 							<a href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank">
-								<i class="glyphicon glyphicon-link"></i>
+								<i class="bi-link"></i>
 							</a>
 						</li>
 					</ol>
@@ -313,17 +296,17 @@
 				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
 				<li>2016年9月17日 二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」
 					<a href="http://ictco.jp/syousai.html?id=137" target="_blank">
-						<i class="glyphicon glyphicon-link"></i>
+						<i class="bi-link"></i>
 					</a>
 				</li>
 				<li>2017年3月17日 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」
 					<a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">
-						<i class="glyphicon glyphicon-link"></i>
+						<i class="bi-link"></i>
 					</a>
 				</li>
 				<li>2018年 第176回ヒューマンコンピュータインタラクション研究会 学生奨励賞 「3DPrinCar：行き先に応じた物品を推薦・提供する乗用車」
 					<a href="http://www.meiji.ac.jp/ams/info/6t5h7p00000qa5i3.html" target="_blank">
-						<i class="glyphicon glyphicon-link"></i>
+						<i class="bi-link"></i>
 					</a>
 				</li>
 			</ol>
